cmake_minimum_required(VERSION 2.6)

PROJECT(test_client)

AUX_SOURCE_DIRECTORY(./ SRC_LIST)
SET(EXECUTABLE_OUTPUT_PATH  ./)

if(APPLE)
    SET(PB_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../base/pb/lib/mac)
elseif(UNIX)
    SET(PB_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../base/pb/lib/linux)
endif()

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)


INCLUDE_DIRECTORIES(./ ../base ../base/pb/protocol ../base/jsoncpp/ ../base/pb/)
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/ ${CMAKE_CURRENT_SOURCE_DIR}/../base ${PB_LIB_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../base/slog/lib)

#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
ADD_EXECUTABLE(test_client ${SRC_LIST})

TARGET_LINK_LIBRARIES(test_client base protobuf-lite slog pthread -lcurl) 